--- a/package.json
+++ b/package.json
@@ -10,5 +10,13 @@
   },
   "devDependencies": {
     "astro": "^0.21.6"
+  },
+  "dependencies": {
+    "@astrojs/renderer-react": "^0.3.1",
+    "@supabase/supabase-js": "^1.28.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "slate": "^0.71.0",
+    "slate-react": "^0.71.0"
   }
 }
